--- a/Mainfiles/contact.html
+++ b/Mainfiles/contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact | Hasy's Cuisine</title>
     <link rel="shortcut icon" href="images/tittle_logo1.jpg">
-    <link rel="stylesheet" href="rese.css">
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="globalStyles.css">
     <link rel="stylesheet" href="components.css">
     <!-- aos library scroll css -->
